# duckling

./: .gitignore  README.md
.github/workflows/: ci.yml  release.yml  rust-ci.yml
docs/: NER_TIME_EVAL.md  RECOGNIZERS_EVAL.md  REMAINING_DIMENSIONS.md  RUST_PORT_PROGRESS.md  TE3_TIME_EVAL.md
docs/superpowers/plans/: 2026-06-30-duckling-rust-en-time.md
rust/: .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml
rust/eval/: ner_time_eval.py  recognizers_eval.py  te3_time_eval.py
rust/fixtures/: amountofmoney_corpus.json  combined_dims.json  creditcard_corpus.json  differential.json  distance_corpus.json  duration_corpus.json  email_corpus.json  en_time_corpus.json  gb_locale.json  holiday_years.json  hyphenated_units_corpus.json  modern_holidays.json  multi_entity.json  numeral_corpus.json  ordinal_corpus.json  phonenumber_corpus.json  quantity_corpus.json  random_diff.json  ref_stress.json  region_dates.json  region_holiday_check.json  region_holidays.json  sentence_stress.json  spoken_forms.json  temperature_corpus.json  tod_ref.json  tz_gapfold.json  tz_stress.json  tz_truth.json  url_corpus.json  values_array.json  volume_corpus.json
rust/src/: creditcard.rs  document.rs  duration.rs  engine.rs  grain.rs  json.rs  lib.rs  main.rs  numeral.rs  ordinal.rs  phonenumber.rs  ranking.rs  regex.rs  resolve.rs  timegrain.rs  types.rs  url.rs
rust/src/amountofmoney/: en.rs  mod.rs
rust/src/distance/: en.rs  mod.rs
rust/src/duration/: en.rs  mod.rs
rust/src/email/: en.rs  mod.rs
rust/src/numeral/: en.rs  mod.rs
rust/src/ordinal/: en.rs  mod.rs
rust/src/quantity/: en.rs  mod.rs
rust/src/temperature/: en.rs  mod.rs
rust/src/time/: computed.rs  en_rules.rs  mod.rs  object.rs  predicate.rs
rust/src/time/en/: cycles.rs  dates.rs  holidays.rs  intervals.rs  mod.rs  modifiers.rs  timeofday.rs
rust/src/timegrain/: mod.rs
rust/src/volume/: en.rs  mod.rs
rust/tests/: batch_json.rs  cli.rs  corpus.rs  corpus.rs.bak  dbg.rs
rust/tools/: extract_corpus.py  oracle.py  tz_probe.py
